# document-manager

./: db.sqlite3  pyproject.toml  test
document_manager/: __init__.py  celery.py  settings.py  urls.py
documents/: __init__.py  admin.py  apps.py  models.py  notifications.py  receivers.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
documents/button/: docuemnts_button.py  documentmanager_button.py  documents_button.py
documents/display/: documentmanager_display.py  documents_display.py  profile_display.py  type_display.py
documents/migrations/: 0001_initial.py  0002_profile_company.py  0003_alter_profile_company.py
documents/preview/: documentmanager_preview.py  documents_preview.py
documents/tests/: test_viewsets.py
documents/titles/: documentmanager_title.py  documents_title.py  profile_title.py  type_title.py
